--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,5 +1,10 @@
 name: Prettier code formatter
 
+on: 
+  pull_request:
+    branches:
+      - master
+      - main
 jobs:
   check:
     # available images: https://github.com/actions/runner-images#available-images
@@ -11,9 +16,9 @@ jobs:
         uses: actions/setup-node@v4
       - name: Install Prettier 💾
         run: npm install --save-dev --save-exact prettier @shopify/prettier-plugin-liquid
-      - name: Prettier Check 🔎
-        id: prettier
-        run: npx prettier . --check
+     # - name: Prettier Check 🔎
+     #   id: prettier
+     #   run: npx prettier . --check
       - name: Create diff 📝
         # https://docs.github.com/en/actions/learn-github-actions/expressions#failure
         if: ${{ failure() }}
